--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,7 +71,10 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url("data:image/svg+xml,%3Csvg width='250' height='250' viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='100%25' height='100%25' fill='%23010409'/%3E%3Cg stroke-width='1.5' stroke='%231c7ed6' fill='none' opacity='0.2'%3E%3Cpath d='M30 30 l15 -10 l15 10 v20 l-15 10 l-15 -10 z M45 30 v-10'/%3E%3Cpath d='M90 25 v30 M95 25 v30'/%3E%3Cpath d='M140 55 v-30 m-10 10 h20 M140 25 a7 7 0 1 0 0 -14 a7 7 0 1 0 0 14'/%3E%3Cpath d='M190 35 q15 -20 30 0 M190 35 q15 20 30 0 M205 35 a3 3 0 1 0 0 -6 a3 3 0 1 0 0 6'/%3E%3Cpath d='M20 100 h30 M35 100 a15 15 0 0 1 -30 0'/%3E%3Cpath d='M90 110 l0 -20 l10 0 l10 20 l-10 0 l-10 -15'/%3E%3Cpath d='M150 90 h20 M150 100 h20 M150 110 h20'/%3E%3Cpath d='M200 80 v40 l10 -5 v-30 Z'/%3E%3Cpath d='M50 185 v-30 m-10 10 h20 M50 155 a7 7 0 1 0 0 -14 a7 7 0 1 0 0 14'/%3E%3Cpath d='M110 160 c 0 20, 30 20, 30 0 c 0 -20, -30 -20, -30 0 z'/%3E%3Cpath d='M180 170 h30 M195 170 v-20'/%3E%3Cpath d='M30 220 l30 0 l-15 -20 z'/%3E%3Cpath d='M90 210 h20 v20 h-20 z'/%3E%3Cpath d='M150 220 a15 15 0 0 0 30 0'/%3E%3C/g%3E%3C/svg%3E");
+ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.png");
+ background-size: contain;
+ background-position: center;
+ background-repeat: repeat;
     scroll-behavior: smooth;
   }
 }
